<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/dp10"
    tools:context=".ui.dashboard.DashBoardActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_back"
        style="@style/TextAppearance.Cinergy.Subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp24"
        android:drawablePadding="@dimen/dp10"
        android:gravity="left"
        android:text="@string/dash_txt1"
        android:layout_marginLeft="@dimen/dp10"
        android:drawableLeft="@drawable/icon_back"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_location"
        style="@style/TextAppearance.Cinergy.Subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp24"
        android:drawablePadding="@dimen/dp10"
        android:gravity="end"
        android:text="@string/dash_txt2"
        android:layout_marginEnd="@dimen/dp10"
        android:drawableStart="@drawable/icon_location"
        android:layout_marginLeft="@dimen/dp10"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_content"
        style="@style/TextAppearance.Cinergy.Subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginTop="@dimen/dp24"
        android:text="@string/dash_txt3"
        android:layout_marginLeft="@dimen/dp10"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_back" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginBottom="@dimen/dp18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>